--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,13 @@ dependencies:
   firebase_core: ^2.9.0
   cloud_firestore: ^4.5.0
   google_sign_in: ^6.1.0
+  provider: ^6.0.5
+  country_picker: ^2.0.20
+  flutter_rating_bar: ^4.0.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  flutter_launcher_icons: ^0.13.1
+  
 
 dev_dependencies:
   flutter_test:
